[package]
name = "poe-atlas-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
wasm-bindgen = "0.2.79"

[lib]
crate-type = ["cdylib"]